# FtcRustController

./: .gitmodules  README.md  rust-toolchain.toml
TeamCode/: build.gradle
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: MyLinearOpMode.java
TeamCode/team_code_rust/: Cargo.toml
TeamCode/team_code_rust/src/: lib.rs
